# satispy

./: .travis.yml  LICENSE  README.md  build.sh  cnftest.py  dev-requirements.txt  hamiltonian_cycle.py  hamiltonian_cycle_bit.py  pyproject.toml  release.sh  setup.py  venv.sh
examples/: cygwin_lingeling.py  from_readme.py  hamiltonian_cycle.py
satispy/: __init__.py  cnf.py  exception.py  solution.py
satispy/io/: __init__.py  dimacs_cnf.py
satispy/solver/: __init__.py  cadical.py  cryptominisat.py  glucose.py  intel_sat_solver.py  lingeling.py  minisat.py  picosat.py  sat4j.py
src/ext/: cnf_cnf.c  cnf_cnf.h  cnf_module.c  cnf_module.h  cnf_variable.c  cnf_variable.h  cnf_variableset.c  cnf_variableset.h  cnfmodule.c
src/python/satispy/: __init__.py
src/python/satispy/io/: dimacs_cnf.py
src/python/satispy/solver/: __init__.py
tests/: run_tests.py
