[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "satispy"
version = "1.2"
requires-python = ">= 3.10"
description = "An interface to SAT solver tools (like minisat)"

readme = "README.md"

authors = [
  { name = "Fábián Tamás László", email = "giganetom@gmail.com" }
]

url = "https://github.com/netom/satispy/"
download_url = "https://github.com/netom/satispy/tarball/1.2#egg=satispy-1.2"
license = "BSD-3-Clause"
platforms = "OS Independent"

packages = [
  "satispy",
  "satispy.io",
  "satispy.solver"
]

classifiers = [
    "Development Status :: 4 - Beta"
    "Environment :: Plugins"
    "Intended Audience :: Developers"
    "Intended Audience :: Science/Research"
    "Operating System :: OS Independent"
    "Programming Language :: Python :: 3"
    "Topic :: Scientific/Engineering :: Mathematics"
    "Topic :: Software Development :: Libraries"
]
