[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "satispy"
description = "An interface to SAT solver tools (like minisat)"

version = "1.3"
requires-python = ">= 3.10"

dependencies = []

authors = [
  { name = "Fábián Tamás László", email = "giganetom@gmail.com" },
]

readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/netom/satispy/"
